# zig-pico-cmake

./: .gitignore  CMakeLists.txt  LICENSE  Readme.md  build.zig
config/: config_autogen.h  version.h
config/pico/: config_autogen.h.example  version.h
src/: helper.zig  imports.zig  main.zig
